--- a/miruene_demo_v2/www/scn_nechu.html
+++ b/miruene_demo_v2/www/scn_nechu.html
@@ -15,7 +15,7 @@
     <script src="js/btn.js"></script>
     <script src="js/video.js"></script>
 
-    <script src="js/irkit.js"></script>
+    <script src="js/ir_send.js"></script>
 
     <script src="js/scenario.js"></script>
 
@@ -26,33 +26,10 @@
 
 
   <script>
-    var opration_flag =  false; //操作されたかチェック
-	var scenario_post_str ;
-    	function  opration_check() {
-			 if(!opration_flag){
-				console.log("index");
-    			console.log("scenario_post_str:" +scenario_post_str);
-
-                scenario_exec(scenario_post_str);
-				// 家電機器初期設定
-                sendIRkit_init_command();
-                myNavigator.resetToPage("exp_index.html");
-			 } else{
-				console.log("index");
-			 }
-			 opration_flag=false;
-		}
-
+        var opration_flag =  false; //操作されたかチェック
+        var scenario_post_str ;
 
         var rep_hits_flag =  false; //連打防止
-
-    	function  hits_flag() {
-			rep_hits_flag= true;
-		    setTimeout( function (){
-				console.log("disabled");
-				hits_flag =false ;
-		    } , 1000); 			
-		}
 
 
 
@@ -74,17 +51,14 @@
     	
 		setInterval("opration_check()",NO_OPRATIN_TIME); //
     	//  すべて
-        scenario_exec("SCENARIO_ALLT_RESET");
-
-
-
+        //起床
+//		scenario_post_str ="SCENARIO_POST_WAKEUP";
+		scenario_exec("SCENARIO_HEATPROTECT");
 
 		//シナリオインデクス(戻る)
 		$(document).on('click','.exp_index',function(e) {
-	           sendIRkit_init_command();
-             scenario_exec(scenario_post_str);
-            console.log("exp_index");
-			myNavigator.resetToPage("exp_index.html");
+		    console.log("シナリオインデクス(戻る)");
+            localtion.href = "scn_menu.html";
 		});
 
 
@@ -109,8 +83,8 @@
         <img src="./hdimages/red_scn_aircon.png" class="scene_frame blink_anime small_view scenario-cur" >
         <img border="0" src="./hdimages/bk_nechu.png"  style="position: absolute;top:0;left:0" >
 
-	<div class="scene_top_button">
-		<img border="0" src="./hdimages/btn_scn_return.png" class="btn_tap_anim exp_index" style="position: absolute;left: 2289px;top:1409px"  alt="機器の操作に戻る">
+	<div id="scene_top_button">
+		<img border="0" src="./hdimages/btn_scn_return.png" class="btn_tap_anim exp_index" style="position: absolute;left:  2289px;top:1409px;"  alt="機器の操作に戻る">
 	</div>
 </div>
     
