--- a/miruene_demo_v2/www/kiki_tv.html
+++ b/miruene_demo_v2/www/kiki_tv.html
@@ -11,14 +11,11 @@
     <!-- 効果音-->
     <script src="./js/ion.sound.min.js"></script>
     <script src="./js/sound.js"></script>
-
-
+    <script src="./js/keycheck.js"></script>
     <link rel="stylesheet" href="css/style.css">
 
-    <script src="js/irkit.js"></script>
+    <script src="js/ir_send.js"></script>
     <script src="js/scenario.js"></script>
-
-
     <link rel="stylesheet" href="css/anime_btn.css">
     <script src="js/btn.js"></script>
 
@@ -53,7 +50,7 @@
             {
                 console.log("is ready!");
                 setBtnAnim();
-                setBtnSound();
+                //setBtnSound();
                 //
                 const OP_TIME = 200; //操作画面への遷移
                 const NEXTPAGE_TIME = 3400; //操作画面への遷移
@@ -77,7 +74,6 @@
 
                 // clearInterval(opration_check);
 
-                sendIRkit_init_command();
                 scenario_exec("SCENARIO_ALLT_RESET");
 
                 var rep_hits_flag = true; //操作されたかチェック
@@ -103,58 +99,30 @@
                 /*------------------------------
                 　家電操作
                 --------------------------------*/
-
                 //TV
                 $(document).on('click', '#tv_power', function (e) {
-                    if (rep_hits_flag) {
-                        console.log("連打禁止");
-                        return;
-                    }
-                    hits_flag();
-
-                    ion.sound.play("click1");
-                    sendIRkit_command("TV_ON");
+                    sendIRUSB_command("TV_ON");
                     //sendIRkit_dbl_command("TV_ON",2000);
                     console.log("tv_power");
                 });
 
                 $(document).on('click', '#tv_ch_up', function (e) {
-                    if (rep_hits_flag) {
-                        console.log("連打禁止");
-                        return;
-                    }
-                    hits_flag();
-                    sendIRkit_command("TV_CH_UP");
+                    sendIRUSB_command("TV_CH_UP");
                     console.log("tv_ch_up");
                 });
 
                 $(document).on('click', '#tv_ch_down', function (e) {
-                    if (rep_hits_flag) {
-                        console.log("連打禁止");
-                        return;
-                    }
-                    hits_flag();
-                    sendIRkit_command("TV_CH_DOWN");
+                    sendIRUSB_command("TV_CH_DOWN");
                     console.log("tv_ch_down");
                 });
 
                 $(document).on('click', '#tv_chidegi', function (e) {
-                    if (rep_hits_flag) {
-                        console.log("連打禁止");
-                        return;
-                    }
-                    hits_flag(this);
-                    sendIRkit_command("TV_CHIDEGI");
+                    sendIRUSB_command("TV_CHIDEGI");
                     console.log("tv_chidegi");
                 });
 
                 $(document).on('click', '#tv_bs', function (e) {
-                    if (rep_hits_flag) {
-                        console.log("連打禁止");
-                        return;
-                    }
-                    hits_flag();
-                    sendIRkit_command("TV_BS");
+                    sendIRUSB_command("TV_BS");
                     console.log("tv_bs");
                 });
                 //機器操作インデクス
@@ -177,18 +145,12 @@
 
         <div style="position: relative;margin: 0px; padding: 0px;width:100%;height: auto;">
 		    <img border="0" src="./hdimages/bk_tv.png"  style="position: absolute;top:0;left:0">
-
 		    <img border="0" src="./hdimages/btn_tv_power.png" id="tv_power"  alt="電源" class="btn_tap_anim btn_tap_sound" style="position:absolute;left:389px;top:730px" >
-
 		    <img border="0" src="./hdimages/btn_tv_chup.png" id="tv_ch_up"  alt="チャンネル上" class="btn_tap_anim btn_tap_sound"  style="position:absolute;left:1121px;top:730px;" >
-
 		    <img border="0" src="./hdimages/btn_tv_chdown.png"  id="tv_ch_down"  alt="チャンネル下" class="btn_tap_anim btn_tap_sound" style="position:absolute;left:1121px;top:1010px;" >
-
 		    <img border="0" src="./hdimages/btn_tv_chideji.png" id="tv_chidegi" alt="地デジ" class="btn_tap_anim btn_tap_sound" style="position:absolute;left:1853px;top:486px" >
-
 		    <img border="0" src="./hdimages/btn_tv_bs.png"   id="tv_bs"  alt="BS" class="btn_tap_anim btn_tap_sound" style="position:absolute;left:1853px;top:942px;" >
-
-            <img border="0" src="./hdimages/btn_kiki_return.png" alt="戻る" class="btn_tap_anim btn_tap_sound op_index" style="position:absolute;left:145px;top:1424px;">    	</a>
-    
+            <img border="0" src="./hdimages/btn_kiki_return.png" alt="戻る" class="btn_tap_anim btn_tap_sound op_index" style="position:absolute;left:145px;top:1424px;">    
+        </div>   
 </body>
 </html>
