--- a/miruene_demo_v2/www/pre_aircon.html
+++ b/miruene_demo_v2/www/pre_aircon.html
@@ -52,7 +52,7 @@
  <!-- エアコン説明 -->
     <div style="position: relative;margin: 0px; padding: 0px;width:100%;height: auto;">
         <img border="0" src="./hdimages/bk_pre_aircon.png" width="2736" height="1824" style="position: absolute;top:0;left:0;">
-        <img border="0" src="./hdimages/red_pre_aircon.png" width="2736" height="1824" style="position: absolute;top:0;left:0;">
+        <img border="0" src="./hdimages/red_pre_aircon.png" class="blink_anime" width="2736" height="1824" style="position: absolute;top:0;left:0;">
     </div>
     
 </body>
