--- a/miruene_demo_v2/www/scn_menu.html
+++ b/miruene_demo_v2/www/scn_menu.html
@@ -10,6 +10,8 @@
     <script src="./js/ion.sound.min.js"></script>
     <script src="./js/sound.js"></script>
 
+    <script src="js/ir_send.js"></script>
+    <script src="js/scenario.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/anime_btn.css">
     <script src="js/btn.js"></script>
@@ -18,6 +20,8 @@
       console.log(" UI is ready!");
       setBtnAnim();
       setBtnSound();
+      scenario_exec("SCENARIO_ALLT_RESET");
+
     });
 
     </script>
