--- a/miruene_demo_v2/www/scn_kitaku_b.html
+++ b/miruene_demo_v2/www/scn_kitaku_b.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/anime_btn.css">
     <script src="js/btn.js"></script>
-    <script src="js/irkit.js"></script>
+    <script src="js/ir_send.js"></script>
 
     <script src="js/scenario.js"></script>
 
@@ -47,17 +47,6 @@
 		}
 
 
-    (function ($) {
-        $('#returnhomea').on('show', function(){
-            this.play();
-            console.log("aaa");
-        });
-        $('#returnhomeb').on('show', function(){
-            this.play();
-            console.log("cccc");
-        });
-
-    })(jQuery);
 
 $(document).ready(function(){
 		console.log("Onsen UI is ready!");
@@ -66,16 +55,23 @@ $(document).ready(function(){
 		const NEXTPAGE_TIME = 3000; //操作画面への遷移
 		const DEFAULT_TEMPERATURE=26;// 初期温度
     	const NO_OPRATIN_TIME = 38000; //何もしなければ操作画面への遷移
-		const RETURN_HOME_LATTER_HALF =12000 ;//･帰宅後半の動画開始
+		const RETURN_HOME_LATTER_HALF =7000 ;//･帰宅後半の動画開始
 
         setBtnAnim();	
+    /*
+    // begin 機器操作インデックス　画面遷移
+    */
+
+        setTimeout(	function (){
+            location.href="scn_kitaku_c.html";
+        }, RETURN_HOME_LATTER_HALF);
 
 		/*
 			イベントハンドラー
 		*/
     	// 一定期間操作がなければ　機器操作index
     	
-		setInterval("opration_check(myNavigator)",NO_OPRATIN_TIME); //
+		setInterval("opration_check()",NO_OPRATIN_TIME); //
     	//  すべて
         scenario_exec("SCENARIO_ALLT_RESET");
 
@@ -84,25 +80,16 @@ $(document).ready(function(){
 		});
 
 
-        sendIRkit_init_command();
 
         /*
 		// begin 機器操作インデックス
 		*/
 
-		//起床
+		//帰宅
 		scenario_post_str ="SCENARIO_POST_WAKEUP";
-	   scenario_exec("SCENARIO_WAKEUP");
-//	    myNavigator.resetToPage("scene_detail_wakup.html");  //起床
+		scenario_exec("SCENARIO_RETURNING");
 	
 
-		//シナリオインデクス
-		$(document).on('click','.exp_index',function(e) {
-            sendIRkit_init_command();
-             scenario_exec(scenario_post_str);
-            console.log("exp_index");
-			myNavigator.resetToPage("exp_index.html");
-		});
 
 
     });
@@ -113,17 +100,11 @@ $(document).ready(function(){
 <body>
 
  <!-- 
-	起床	
-	朝起きると、オーディオがオンになり、
-	カーテンが開きます。
-	映像終了後（映像は静止状態）に演出照明がOFF、５秒後にカーテンが閉まり、
 	 -->
     <div style="position: relative;margin: 0px; padding: 0px;width:100%;height: auto;">
         <video src="./movie/kitaku_kaish_b.mp4" preload="none" class="movie_field" autoplay id="video"> </video>
         <img border="0" src="./hdimages/bk_kitaku_kyuto.png" style="position: absolute;top:0;left:0">
-        <div class="scene_top_button">
-            <img border="0" src="./hdimages/btn_scn_return.png" class="btn_tap_anim exp_index" style="position: absolute;left: 2289px;top:1409px" alt="機器の操作に戻る">
-        </div>
+
     </div>
 </body>
 </html>
