--- a/miruene_demo_v2/www/scn_nechu.html
+++ b/miruene_demo_v2/www/scn_nechu.html
@@ -56,9 +56,9 @@
 		scenario_exec("SCENARIO_HEATPROTECT");
 
 		//シナリオインデクス(戻る)
-		$(document).on('click','.exp_index',function(e) {
+		$(document).on('click', '#scene_top_button', function (e) {
 		    console.log("シナリオインデクス(戻る)");
-            localtion.href = "scn_menu.html";
+            location.href = "scn_menu.html";
 		});
 
 
