--- a/miruene_demo_v2/www/scn_bohan.html
+++ b/miruene_demo_v2/www/scn_bohan.html
@@ -64,9 +64,9 @@
 		*/
 
         //シナリオインデクス(戻る)
-        $(document).on('click', '.exp_index', function (e) {
+        $(document).on('click', '#scene_top_button', function (e) {
             console.log("シナリオインデクス(戻る)");
-            localtion.href = "scn_menu.html";
+            location.href = "scn_menu.html";
         });
 
 
