--- a/miruene_demo_v2/www/scn_kisho.html
+++ b/miruene_demo_v2/www/scn_kisho.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/anime_btn.css">
     <script src="js/btn.js"></script>
-    <script src="js/irkit.js"></script>
+    <script src="js/ir_send.js"></script>
 
     <script src="js/scenario.js"></script>
 
@@ -20,44 +20,11 @@
   <script>
     var opration_flag =  false; //操作されたかチェック
 	var scenario_post_str ;
-    	function  opration_check(myNavigator) {
-			 if(!opration_flag){
-				console.log("index");
-    			console.log("scenario_post_str:" +scenario_post_str);
-
-                scenario_exec(scenario_post_str);
-				// 家電機器初期設定
-                sendIRkit_init_command();
-                myNavigator.resetToPage("exp_index.html");
-			 } else{
-				console.log("index");
-			 }
-			 opration_flag=false;
+    	function  opration_check() {
 		}
 
 
-        var rep_hits_flag =  false; //連打防止
 
-    	function  hits_flag() {
-			rep_hits_flag= true;
-		    setTimeout( function (){
-				console.log("disabled");
-				hits_flag =false ;
-		    } , 1000); 			
-		}
-
-
-    (function ($) {
-        $('#returnhomea').on('show', function(){
-            this.play();
-            console.log("aaa");
-        });
-        $('#returnhomeb').on('show', function(){
-            this.play();
-            console.log("cccc");
-        });
-
-    })(jQuery);
 
 $(document).ready(function(){
 		console.log("Onsen UI is ready!");
@@ -75,16 +42,14 @@ $(document).ready(function(){
 		*/
     	// 一定期間操作がなければ　機器操作index
     	
-		setInterval("opration_check(myNavigator)",NO_OPRATIN_TIME); //
+		setInterval("opration_check()",NO_OPRATIN_TIME); //
     	//  すべて
-        scenario_exec("SCENARIO_ALLT_RESET");
 
         $(document).on('click',function(e) {
 		 opration_flag=true;
 		});
 
 
-        sendIRkit_init_command();
 
         /*
 		// begin 機器操作インデックス
@@ -93,16 +58,13 @@ $(document).ready(function(){
 		//起床
 		scenario_post_str ="SCENARIO_POST_WAKEUP";
 	   scenario_exec("SCENARIO_WAKEUP");
-//	    myNavigator.resetToPage("scene_detail_wakup.html");  //起床
 	
 
-		//シナリオインデクス
-		$(document).on('click','.exp_index',function(e) {
-            sendIRkit_init_command();
-             scenario_exec(scenario_post_str);
-            console.log("exp_index");
-			myNavigator.resetToPage("exp_index.html");
-		});
+    //シナリオインデクス(戻る)
+	   $(document).on('click', '#scene_top_button', function (e) {
+	       console.log("シナリオインデクス(戻る)");
+	       location.href = "scn_menu.html";
+	   });
 
 
     });
@@ -124,9 +86,10 @@ $(document).ready(function(){
         <img src="./hdimages/red_scn_curtain.png" class="scene_frame blink_anime small_view scenario-aircom">
         <img src="./hdimages/scn_audio.png" class="scene_frame blink_anime small_view scenario-cur">
         <img border="0" src="./hdimages/bk_kisho.png" style="position: absolute;top:0;left:0">
-        <div class="scene_top_button">
+        <div id="scene_top_button">
             <img border="0" src="./hdimages/btn_scn_return.png" class="btn_tap_anim exp_index" style="position: absolute;left: 2289px;top:1409px" alt="機器の操作に戻る">
         </div>
     </div>
 </body>
 </html>
+s
